--- a/Brandshop/index.html
+++ b/Brandshop/index.html
@@ -26,8 +26,8 @@
             </nav>
             <div>
                 <i class="fa-solid fa-magnifying-glass"></i>
-                </i>
                 <input type="text" placeholder="Zoeken" >
+                <i class="fas fa-cart-shopping"></i>
             </div>
         </div>
     </header>
