--- a/Brandshop/index.html
+++ b/Brandshop/index.html
@@ -31,5 +31,17 @@
             </div>
         </div>
     </header>
+    <main>
+        <section id="herobanner">
+            Nieuw: Nike Invincible 3
+
+VOELEN IS GELOVEN
+Onze meest dempende hardloopschoen voor op straat zit heerlijk, voelt
+superzacht en licht, en ondersteunt je kilometer na kilometer.
+        </section>
+        <section id="trending"></section>
+        <section id="explore"></section>
+        <section id="membership"></section>
+    </main>
 </body>
 </html>
