--- a/Brandshop/index.html
+++ b/Brandshop/index.html
@@ -34,12 +34,46 @@
     <main>
         <section id="herobanner">
             Nieuw: Nike Invincible 3
-
-VOELEN IS GELOVEN
-Onze meest dempende hardloopschoen voor op straat zit heerlijk, voelt
-superzacht en licht, en ondersteunt je kilometer na kilometer.
+            <br>
+            VOELEN IS GELOVEN
+            <br>
+            Onze meest dempende hardloopschoen voor op straat zit heerlijk, voelt superzacht en licht, en ondersteunt je kilometer na kilometer.
+            <br><br>
+            <div class="videoframe">
+                <video autoplay loop src="Brandshop/assets/videos/segment0.ts"></video>
+              </div>
         </section>
-        <section id="trending"></section>
+        <section id="trending">
+            Trending
+            <div class="flex-container">
+                <div class="flex-item">
+                  <img src="/Brandshop/assets/Afbeeldingen/nike air force 1 '07 man.webp" alt="productfoto man">
+                  <div class="flex-container">
+                    <div><h3> </h3><p> </p></div>
+                    <p>Nike Air Force 1 '07 <br>
+                        Herenschoenen  € 119,99
+                     </p>
+                  </div>
+                </div>
+                <div class="flex-item">
+                <img src="/Brandshop/assets/Afbeeldingen/nike air force 1 '07 dame.webp" alt="productfoto vrouw">
+                <div class="flex-container">
+                    <div><h3> </h3><p> </p></div>
+                    <p>Nike Air Force 1 '07 <br>
+                        Damesschoen € 119,99</p>
+                </div>
+                </div>
+                <div class="flex-item">
+                <img src="/Brandshop/assets/Afbeeldingen/air jordan 1 mid kind.webp" alt="productfoto kind">
+                <div class="flex-container">
+                <div><h3> </h3><p> </p></div>
+                <p>Air Jordan 1 Mid <br>
+                    Kinderschoenen € 99,99
+                     </p>
+                </div>
+                </div>
+              </div>
+        </section>
         <section id="explore"></section>
         <section id="membership"></section>
     </main>
