--- a/Brandshop/index.html
+++ b/Brandshop/index.html
@@ -40,14 +40,14 @@
             Onze meest dempende hardloopschoen voor op straat zit heerlijk, voelt superzacht en licht, en ondersteunt je kilometer na kilometer.
             <br><br>
             <div class="videoframe">
-                <video autoplay loop src="Brandshop/assets/videos/segment0.ts"></video>
+                <video autoplay loop src="/Brandshop/assets/videos/segment0.ts"></video>
               </div>
         </section>
         <section id="trending">
             Trending
             <div class="flex-container">
                 <div class="flex-item">
-                  <img src="/Brandshop/assets/Afbeeldingen/nike air force 1 '07 man.webp" alt="productfoto man">
+                  <img src="/Brandshop/assets/Afbeeldingen/nike air force 1 '07 man.webp" alt="productfoto man" class="Trending-pictures">
                   <div class="flex-container">
                     <div><h3> </h3><p> </p></div>
                     <p>Nike Air Force 1 '07 <br>
@@ -56,7 +56,7 @@
                   </div>
                 </div>
                 <div class="flex-item">
-                <img src="/Brandshop/assets/Afbeeldingen/nike air force 1 '07 dame.webp" alt="productfoto vrouw">
+                <img src="/Brandshop/assets/Afbeeldingen/nike air force 1 '07 dame.webp" alt="productfoto vrouw" class="Trending-pictures">
                 <div class="flex-container">
                     <div><h3> </h3><p> </p></div>
                     <p>Nike Air Force 1 '07 <br>
@@ -64,7 +64,7 @@
                 </div>
                 </div>
                 <div class="flex-item">
-                <img src="/Brandshop/assets/Afbeeldingen/air jordan 1 mid kind.webp" alt="productfoto kind">
+                <img src="/Brandshop/assets/Afbeeldingen/air jordan 1 mid kind.webp" alt="productfoto kind" class="Trending-pictures">
                 <div class="flex-container">
                 <div><h3> </h3><p> </p></div>
                 <p>Air Jordan 1 Mid <br>
