--- a/Brandshop/index.html
+++ b/Brandshop/index.html
@@ -33,42 +33,36 @@
     </header>
     <main>
         <section id="herobanner">
-            Nieuw: Nike Invincible 3
-            <br>
-            VOELEN IS GELOVEN
-            <br>
-            Onze meest dempende hardloopschoen voor op straat zit heerlijk, voelt superzacht en licht, en ondersteunt je kilometer na kilometer.
-            <br><br>
             <div class="videoframe">
-                <video autoplay loop src="/Brandshop/assets/videos/segment0.ts"></video>
+                <video autoplay loop muted src="/Brandshop/assets/videos/nike video.mp4"></video>
               </div>
         </section>
         <section id="trending">
-            Trending
+            <h2>Trending</h2> 
             <div class="flex-container">
                 <div class="flex-item">
                   <img src="/Brandshop/assets/Afbeeldingen/nike air force 1 '07 man.webp" alt="productfoto man" class="Trending-pictures">
                   <div class="flex-container">
-                    <div><h3> </h3><p> </p></div>
-                    <p>Nike Air Force 1 '07 <br>
-                        Herenschoenen  € 119,99
+                    <div><h3> </h3> 
+                    <p>Nike Air Force 1 '07     € 119,99<br>
+                        Herenschoenen 
                      </p>
                   </div>
                 </div>
                 <div class="flex-item">
                 <img src="/Brandshop/assets/Afbeeldingen/nike air force 1 '07 dame.webp" alt="productfoto vrouw" class="Trending-pictures">
                 <div class="flex-container">
-                    <div><h3> </h3><p> </p></div>
-                    <p>Nike Air Force 1 '07 <br>
-                        Damesschoen € 119,99</p>
+                    <div><h3> </h3>
+                    <p>Nike Air Force 1 '07     € 119,99<br>
+                        Damesschoen </p>
                 </div>
                 </div>
                 <div class="flex-item">
                 <img src="/Brandshop/assets/Afbeeldingen/air jordan 1 mid kind.webp" alt="productfoto kind" class="Trending-pictures">
                 <div class="flex-container">
-                <div><h3> </h3><p> </p></div>
-                <p>Air Jordan 1 Mid <br>
-                    Kinderschoenen € 99,99
+                <div><h3> </h3>
+                <p>Air Jordan 1 Mid     € 99,99<br>
+                    Kinderschoenen
                      </p>
                 </div>
                 </div>
