--- a/Brandshop/index.html
+++ b/Brandshop/index.html
@@ -9,6 +9,9 @@
     <title>Brandshop</title>
 </head>
 <body>
+
+<!-- Logo moet nog in head komen -->
+
     <header>
         <div class="flex-container">
             <div>
@@ -31,44 +34,64 @@
             </div>
         </div>
     </header>
+
+    <!-- Hier start de main -->
     <main>
         <section id="herobanner">
             <div class="videoframe">
                 <video autoplay loop muted src="/Brandshop/assets/videos/nike video.mp4"></video>
               </div>
+
+
+
         </section>
         <section id="trending">
             <h2>Trending</h2> 
             <div class="flex-container">
+
+
+
+
                 <div class="flex-item">
-                  <img src="/Brandshop/assets/Afbeeldingen/nike air force 1 '07 man.webp" alt="productfoto man" class="Trending-pictures">
+                  <img src="/Brandshop/assets/Afbeeldingen/nike air force 1 '07 man.webp" alt="productfoto man">
                   <div class="flex-container">
-                    <div><h3> </h3> 
-                    <p>Nike Air Force 1 '07     € 119,99<br>
-                        Herenschoenen 
-                     </p>
+                    <div><h3>Nike Air Force 1 '07</h3><p>Herenschoenen</p>
+                    </div>
+                    <p>€ 119,99<br></p>
                   </div>
                 </div>
+
+
+
+
                 <div class="flex-item">
-                <img src="/Brandshop/assets/Afbeeldingen/nike air force 1 '07 dame.webp" alt="productfoto vrouw" class="Trending-pictures">
-                <div class="flex-container">
-                    <div><h3> </h3>
-                    <p>Nike Air Force 1 '07     € 119,99<br>
-                        Damesschoen </p>
+                  <img src="/Brandshop/assets/Afbeeldingen/nike air force 1 '07 dame.webp" alt="productfoto vrouw">
+                  <div class="flex-container">
+                    <div><h3>Nike Air Force 1 '07</h3><p>Damesschoen</p></div>
+                    <p>€ 119,99<br></p>
                 </div>
-                </div>
+
+
+
                 <div class="flex-item">
-                <img src="/Brandshop/assets/Afbeeldingen/air jordan 1 mid kind.webp" alt="productfoto kind" class="Trending-pictures">
-                <div class="flex-container">
-                <div><h3> </h3>
-                <p>Air Jordan 1 Mid     € 99,99<br>
-                    Kinderschoenen
-                     </p>
+                  <img src="/Brandshop/assets/Afbeeldingen/air jordan 1 mid kind.webp" alt="productfoto kind">
+                  <div class="flex-container">
+                    <div><h3>Air Jordan 1 Mid</h3><p>Kinderschoenen</p></div>
+                    <p>€ 99,99<br></p>
                 </div>
-                </div>
-              </div>
+            </div>
+
+
+
+
         </section>
+
+
+
         <section id="explore"></section>
+
+
+
         <section id="membership"></section>
     </main>
 </body>
