--- a/Brandshop/index.html
+++ b/Brandshop/index.html
@@ -80,28 +80,34 @@
             <h2>Ontdek meer</h2>
             <div class="flex-container">
                 <div class="flex-item">
-                    <img src="/Brandshop/assets/Afbeeldingen/heren_look.webp" alt="heren_look">
-                    <div class="flex-container">
-                        <div><h3>Top Sneaker</h3></div>
-                    </div>
+                    <figure>
+                        <img src="/Brandshop/assets/Afbeeldingen/heren_look.webp" alt="heren_look">
+                        <figcaption>
+                            <button type="button"><span class="heren_border">Heren</span></button>
+                        </figcaption>
+                    </figure>
                 </div>
 
 
 
                 <div class="flex-item">
-                    <img src="/Brandshop/assets/Afbeeldingen/dames_look.webp" alt="dames_look">
-                    <div class="flex-container">
-                        <div><h3>Top Sneaker</h3></div>
-                    </div>
+                    <figure>
+                        <img src="/Brandshop/assets/Afbeeldingen/dames_look.webp" alt="dames_look">
+                        <figcaption>
+                            <button type="button"><span>Dames</span></button>
+                        </figcaption>
+                    </figure>
                 </div>
 
 
 
                 <div class="flex-item">
-                    <img src="/Brandshop/assets/Afbeeldingen/kids_look.webp" alt="kids_look">
-                    <div class="flex-container">
-                        <div><h3>Top Sneaker</h3></div>
-                    </div>
+                    <figure>
+                        <img src="/Brandshop/assets/Afbeeldingen/kids_look.webp" alt="kids_look">
+                        <figcaption>
+                            <button type="button"><span>Kids</span></button>
+                        </figcaption>
+                    </figure>
                 </div>
             </div>
         </section>
@@ -114,7 +120,7 @@
                 <div class="flex-item">
                     <img src="/Brandshop/assets/Afbeeldingen/hardlopen.webp" alt="hardlopen">
                     <div class="flex-container">
-                        <div><h3>Top Sneaker</h3></div>
+                        <div><h3>Hardlopen</h3></div>
                     </div>
                 </div>
 
@@ -123,7 +129,7 @@
                 <div class="flex-item">
                         <img src="/Brandshop/assets/Afbeeldingen/voetbal.webp" alt="voetbal">
                         <div class="flex-container">
-                            <div><h3>Top Sneaker</h3></div>
+                            <div><h3>Voetbal</h3></div>
                         </div>
                     </div>
                 </div>
@@ -135,7 +141,7 @@
                     <div class="flex-item">
                         <img src="/Brandshop/assets/Afbeeldingen/basketbal.webp" alt="basketbal">
                         <div class="flex-container">
-                            <div><h3>Top Sneaker</h3></div>
+                            <div><h3>Basketbal</h3></div>
                         </div>
                     </div>
                 </div>
