last try header

--- a/Brandshop/index.html
+++ b/Brandshop/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,17 +9,18 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <title>Brandshop</title>
 </head>
+
 <body>
 
-<!-- Logo moet nog in head komen -->
+    <!-- Logo moet nog in head komen -->
 
     <header>
         <div class="flex-container">
             <div>
                 <img src="assets/Afbeeldingen/Logo_NIKE.svg.png" alt="Logo">
             </div>
-            <nav> 
-                <ul> 
+            <nav>
+                <ul>
                     <li><a href="">Nieuw</a></li>
                     <li><a href="">Dames</a></li>
                     <li><a href="">Heren</a></li>
@@ -29,28 +31,31 @@
             </nav>
             <div>
                 <i class="fa-solid fa-magnifying-glass"></i>
-                <input type="text" placeholder="Zoeken" >
+                <input type="text" placeholder="Zoeken">
                 <i class="fas fa-cart-shopping"></i>
             </div>
         </div>
     </header>
 
     <!-- Hier start de main -->
-    <main>        
+    <main>
         <section id="herobanner">
             <div class="videoframe">
                 <video autoplay loop muted src="/Brandshop/assets/videos/nike video.mp4"></video>
-              </div>
+            </div>
 
         </section>
         <section id="trending">
-            <h2>Trending</h2> 
+            <h2>Trending</h2>
             <div class="flex-container">
 
                 <div class="flex-item">
                     <img src="/Brandshop/assets/Afbeeldingen/nike air force 1 '07 man.webp" alt="productfoto man">
                     <div class="flex-container">
-                        <div><h3>Nike Air Force 1 '07</h3><p>Herenschoenen</p></div>
+                        <div>
+                            <h3>Nike Air Force 1 '07</h3>
+                            <p>Herenschoenen</p>
+                        </div>
                         <p>€ 119,99</p>
                     </div>
                 </div>
@@ -58,7 +63,10 @@
                 <div class="flex-item">
                     <img src="/Brandshop/assets/Afbeeldingen/nike air force 1 '07 dame.webp" alt="productfoto vrouw">
                     <div class="flex-container">
-                        <div><h3>Nike Air Force 1 '07</h3><p>Damesschoen</p></div>
+                        <div>
+                            <h3>Nike Air Force 1 '07</h3>
+                            <p>Damesschoen</p>
+                        </div>
                         <p>€ 119,99</p>
                     </div>
                 </div>
@@ -66,15 +74,16 @@
                 <div class="flex-item">
                     <img src="/Brandshop/assets/Afbeeldingen/air jordan 1 mid kind.webp" alt="productfoto kind">
                     <div class="flex-container">
-                        <div><h3>Air Jordan 1 Mid</h3><p>Kinderschoenen</p></div>
+                        <div>
+                            <h3>Air Jordan 1 Mid</h3>
+                            <p>Kinderschoenen</p>
+                        </div>
                         <p>€ 99,99</p>
                     </div>
                 </div>
             </div>
 
         </section>
-
-
 
         <section id="ontdek">
             <h2>Ontdek meer</h2>
@@ -88,8 +97,6 @@
                     </figure>
                 </div>
 
-
-
                 <div class="flex-item">
                     <figure>
                         <img src="/Brandshop/assets/Afbeeldingen/dames_look.webp" alt="dames_look">
@@ -98,8 +105,6 @@
                         </figcaption>
                     </figure>
                 </div>
-
-
 
                 <div class="flex-item">
                     <figure>
@@ -112,41 +117,38 @@
             </div>
         </section>
 
-
-
         <section id="shop">
             <h2>Shop op sport</h2>
             <div class="flex-container">
                 <div class="flex-item">
                     <img src="/Brandshop/assets/Afbeeldingen/hardlopen.webp" alt="hardlopen">
                     <div class="flex-container">
-                        <div><h3>Hardlopen</h3></div>
-                    </div>
-                </div>
-
-
-
-                <div class="flex-item">
-                        <img src="/Brandshop/assets/Afbeeldingen/voetbal.webp" alt="voetbal">
-                        <div class="flex-container">
-                            <div><h3>Voetbal</h3></div>
+                        <div>
+                            <h3>Hardlopen</h3>
                         </div>
                     </div>
                 </div>
 
-
-
-
                 <div class="flex-item">
-                    <div class="flex-item">
-                        <img src="/Brandshop/assets/Afbeeldingen/basketbal.webp" alt="basketbal">
-                        <div class="flex-container">
-                            <div><h3>Basketbal</h3></div>
+                    <img src="/Brandshop/assets/Afbeeldingen/voetbal.webp" alt="voetbal">
+                    <div class="flex-container">
+                        <div>
+                            <h3>Voetbal</h3>
                         </div>
                     </div>
                 </div>
-            </div> 
+
+                <div class="flex-item">
+                    <img src="/Brandshop/assets/Afbeeldingen/basketbal.webp" alt="basketbal">
+                    <div class="flex-container">
+                        <div>
+                            <h3>Basketbal</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
 </body>
+
 </html>
