--- a/Brandshop/index.html
+++ b/Brandshop/index.html
@@ -22,10 +22,9 @@
             <nav>
                 <ul>
                     <li><a href="">Nieuw</a></li>
-                    <li><a href="">Dames</a></li>
                     <li><a href="">Heren</a></li>
-                    <li><a href="">Kinderen</a></li>
-                    <li><a href="">Baby's</a></li>
+                    <li><a href="">Dames</a></li>
+                    <li><a href="">Kids</a></li>
                     <li><a href="">Sale</a></li>
                 </ul>
             </nav>
