--- a/Brandshop/index.html
+++ b/Brandshop/index.html
@@ -49,7 +49,7 @@
             <div class="flex-container">
 
                 <div class="flex-item">
-                    <img src="/Brandshop/assets/Afbeeldingen/nike air force 1 '07 man.webp" alt="productfoto man">
+                    <img src="/Brandshop/assets/nike air force 1 '07 man.webp" alt="productfoto man">
                     <div class="flex-container">
                         <div>
                             <h3>Nike Air Force 1 '07</h3>
@@ -60,7 +60,7 @@
                 </div>
 
                 <div class="flex-item">
-                    <img src="/Brandshop/assets/Afbeeldingen/nike air force 1 '07 dame.webp" alt="productfoto vrouw">
+                    <img src="/Brandshop/assets/nike air force 1 '07 dame.webp" alt="productfoto vrouw">
                     <div class="flex-container">
                         <div>
                             <h3>Nike Air Force 1 '07</h3>
@@ -71,7 +71,7 @@
                 </div>
 
                 <div class="flex-item">
-                    <img src="/Brandshop/assets/Afbeeldingen/air jordan 1 mid kind.webp" alt="productfoto kind">
+                    <img src="/Brandshop/assets/air jordan 1 mid kind.webp" alt="productfoto kind">
                     <div class="flex-container">
                         <div>
                             <h3>Air Jordan 1 Mid</h3>
@@ -89,7 +89,7 @@
             <div class="flex-container">
                 <div class="flex-item">
                     <figure>
-                        <img src="/Brandshop/assets/Afbeeldingen/heren_look.webp" alt="heren_look">
+                        <img src="/Brandshop/assets/heren_look.webp" alt="heren_look">
                         <figcaption>
                             <button type="button"><span class="heren_border">Heren</span></button>
                         </figcaption>
@@ -98,7 +98,7 @@
 
                 <div class="flex-item">
                     <figure>
-                        <img src="/Brandshop/assets/Afbeeldingen/dames_look.webp" alt="dames_look">
+                        <img src="/Brandshop/assets/dames_look.webp" alt="dames_look">
                         <figcaption>
                             <button type="button"><span>Dames</span></button>
                         </figcaption>
@@ -107,7 +107,7 @@
 
                 <div class="flex-item">
                     <figure>
-                        <img src="/Brandshop/assets/Afbeeldingen/kids_look.webp" alt="kids_look">
+                        <img src="/Brandshop/assets/kids_look.webp" alt="kids_look">
                         <figcaption>
                             <button type="button"><span>Kids</span></button>
                         </figcaption>
@@ -120,7 +120,7 @@
             <h2>Shop op sport</h2>
             <div class="flex-container">
                 <div class="flex-item">
-                    <img src="/Brandshop/assets/Afbeeldingen/hardlopen.webp" alt="hardlopen">
+                    <img src="/Brandshop/assets/hardlopen.webp" alt="hardlopen">
                     <div class="flex-container">
                         <div>
                             <h3>Hardlopen</h3>
@@ -129,7 +129,7 @@
                 </div>
 
                 <div class="flex-item">
-                    <img src="/Brandshop/assets/Afbeeldingen/voetbal.webp" alt="voetbal">
+                    <img src="/Brandshop/assets/voetbal.webp" alt="voetbal">
                     <div class="flex-container">
                         <div>
                             <h3>Voetbal</h3>
@@ -138,7 +138,7 @@
                 </div>
 
                 <div class="flex-item">
-                    <img src="/Brandshop/assets/Afbeeldingen/basketbal.webp" alt="basketbal">
+                    <img src="/Brandshop/assets/basketbal.webp" alt="basketbal">
                     <div class="flex-container">
                         <div>
                             <h3>Basketbal</h3>
