--- a/Brandshop/index.html
+++ b/Brandshop/index.html
@@ -17,7 +17,7 @@
     <header>
         <div class="flex-container">
             <div>
-                <img src="assets/Afbeeldingen/Logo_NIKE.svg.png" alt="Logo">
+                <img src="assets/Logo_NIKE.svg.png" alt="Logo">
             </div>
             <nav>
                 <ul>
@@ -40,7 +40,7 @@
     <main>
         <section id="herobanner">
             <div class="videoframe">
-                <video autoplay loop muted src="/Brandshop/assets/videos/nike video.mp4"></video>
+                <video autoplay loop muted src="/Brandshop/assets/nike video.mp4"></video>
             </div>
 
         </section>
