--- a/Brandshop/index.html
+++ b/Brandshop/index.html
@@ -148,6 +148,7 @@
             </div>
         </section>
     </main>
+    <p class="info">Ik heb al verschillende keren geprobeerd, maar ik krijg de afbeeldingen niet online.</p>
 </body>
 
 </html>
