--- a/Brandshop/index.html
+++ b/Brandshop/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
-    <title>Brandshop</title>
+    <title>Brandshop Nike</title>
+    <link rel="shortcut icon" href="assets/www.nike.com_be_en_.png" type="image/png">
 </head>
 
 <body>
