--- a/Brandshop/index.html
+++ b/Brandshop/index.html
@@ -8,11 +8,10 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <title>Brandshop Nike</title>
-    <link rel="shortcut icon" href="assets/www.nike.com_be_en_.png" type="image/png">
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
 </head>
 
 <body>
-    <!-- Logo moet nog in head komen -->
     <header>
         <div class="flex-container">
             <div>
@@ -135,7 +134,6 @@
             </div>
         </section>
     </main>
-    <p class="info">Ik heb al verschillende keren geprobeerd, maar ik krijg de afbeeldingen niet online.</p>
 </body>
 
 </html>
