--- a/Brandshop/index.html
+++ b/Brandshop/index.html
@@ -111,7 +111,7 @@
                     <img src="assets/hardlopen.webp" alt="hardlopen">
                     <div class="flex-container">
                         <div>
-                            <h3>Hardlopen</h3>
+                            <p class="sport">Hardlopen</p>
                         </div>
                     </div>
                 </div>
@@ -119,7 +119,7 @@
                     <img src="assets/voetbal.webp" alt="voetbal">
                     <div class="flex-container">
                         <div>
-                            <h3>Voetbal</h3>
+                            <p class="sport">Voetbal<p>
                         </div>
                     </div>
                 </div>
@@ -127,7 +127,7 @@
                     <img src="assets/basketbal.webp" alt="basketbal">
                     <div class="flex-container">
                         <div>
-                            <h3>Basketbal</h3>
+                            <p class="sport">Basketbal<p>
                         </div>
                     </div>
                 </div>
