--- a/Brandshop/index.html
+++ b/Brandshop/index.html
@@ -119,7 +119,8 @@
                     <img src="assets/voetbal.webp" alt="voetbal">
                     <div class="flex-container">
                         <div>
-                            <p class="sport">Voetbal<p>
+                            <p class="sport">Voetbal
+                            <p>
                         </div>
                     </div>
                 </div>
@@ -127,13 +128,60 @@
                     <img src="assets/basketbal.webp" alt="basketbal">
                     <div class="flex-container">
                         <div>
-                            <p class="sport">Basketbal<p>
+                            <p class="sport">Basketbal
+                            <p>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
     </main>
+    <footer>
+        <div class="flex-container">
+            <ul>
+                <li><a href="#">CADEAUBONNEN</a></li>
+                <li><a href="#">ZOEK EEN STORE</a></li>
+                <li><a href="#">NIKE JOURNAL</a></li>
+                <li><a href="#">WORD MEMBER</a></li>
+                <li><a href="#">STUDENTENKORTING</a></li>
+                <li><a href="#">FEEDBACK</a></li>
+                <li><a href="#">PROMOTIECODES</a></li>
+            </ul>
+            <ul>
+                <li><a href="#">HELP</a></li>
+                <li><a href="#">Bestelstatus</a></li>
+                <li><a href="#">Verzending en levering</a></li>
+                <li><a href="#">Retourzendingen</a></li>
+                <li><a href="#">Betaalmethode</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+            <ul>
+                <li><a href="#">OVER NIKE</a></li>
+                <li><a href="#">Nieuws</a></li>
+                <li><a href="#">Werken bij Nike</a></li>
+                <li><a href="#">Investeerders</a></li>
+                <li><a href="#">Duurzaamheid</a></li>
+            </ul>
+            <ul>
+                <li><a href="#">JOIN US</a></li>
+                <li><a href="#">Nike App</a></li>
+                <li><a href="#">Nike Run Club</a></li>
+                <li><a href="#">Nike Training Club</a></li>
+                <li><a href="#">SNKRS</a></li>
+            </ul>
+            <div>
+                <a href="#"><i class="fa-brands fa-square-twitter"></i></a>
+                <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
+                <a href="#"><i class="fa-brands fa-square-youtube"></i></a>
+                <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
+            </div>
+        </div>
+        <div class="flex-container">
+            <div class="flex-item">...</div>
+            <div class="flex-item">...</div>
+            <div class="flex-item">...</div>
+        </div>
+    </footer>
 </body>
 
 </html>
