--- a/Brandshop/index.html
+++ b/Brandshop/index.html
@@ -176,10 +176,25 @@
                 <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
             </div>
         </div>
+
         <div class="flex-container">
-            <div class="flex-item">...</div>
-            <div class="flex-item">...</div>
-            <div class="flex-item">...</div>
+            <div class="flex-item">
+            <a href="#"><i class="fa-solid fa-location-dot"></i>België</a>
+        </div>
+        <div class="flex-item">
+            <a href="#">
+                <i class="fa-regular fa-copyright"></i>2023 Nike, Inc. Alle rechten voorbehouden</a>
+        </div>
+
+        <div class="flex-item">
+            <a href="#">Handleidingen</a>
+            <a href="#">Algemene voorwaarden</a>
+            <a href="#">Verkoopwaarden</a>
+            <a href="#">Bedrijfsgegevens</a>
+            <a href="#">Privacy- en cookiebeleid</a>
+            <a href="#">Cookie-instellingen</a>
+
+        </div>
         </div>
     </footer>
 </body>
