--- a/Brandshop/index.html
+++ b/Brandshop/index.html
@@ -183,7 +183,7 @@
         </div>
         <div class="flex-item">
             <a href="#">
-                <i class="fa-regular fa-copyright"></i>2023 Nike, Inc. Alle rechten voorbehouden</a>
+                <i class="fa-regular fa-copyright"></i></a><p>2023 Nike, Inc. Alle rechten voorbehouden</p>
         </div>
 
         <div class="flex-item">
