--- a/Brandshop/index.html
+++ b/Brandshop/index.html
@@ -177,24 +177,25 @@
             </div>
         </div>
 
-        <div class="flex-container">
+        <div class="flex-container legal">
             <div class="flex-item">
-            <a href="#"><i class="fa-solid fa-location-dot"></i>België</a>
-        </div>
-        <div class="flex-item">
-            <a href="#">
-                <i class="fa-regular fa-copyright"></i></a><p>2023 Nike, Inc. Alle rechten voorbehouden</p>
-        </div>
+                <a href="#"><i class="fa-solid fa-location-dot"></i>België</a>
+            </div>
+            <div class="flex-item">
+                <a href="#">
+                    <i class="fa-regular fa-copyright"></i></a>
+                <p>2023 Nike, Inc. Alle rechten voorbehouden</p>
+            </div>
 
-        <div class="flex-item">
-            <a href="#">Handleidingen</a>
-            <a href="#">Algemene voorwaarden</a>
-            <a href="#">Verkoopwaarden</a>
-            <a href="#">Bedrijfsgegevens</a>
-            <a href="#">Privacy- en cookiebeleid</a>
-            <a href="#">Cookie-instellingen</a>
+            <div class="flex-item">
+                <a href="#">Handleidingen</a>
+                <a href="#">Algemene voorwaarden</a>
+                <a href="#">Verkoopwaarden</a>
+                <a href="#">Bedrijfsgegevens</a>
+                <a href="#">Privacy- en cookiebeleid</a>
+                <a href="#">Cookie-instellingen</a>
 
-        </div>
+            </div>
         </div>
     </footer>
 </body>
