--- a/Brandshop/index.html
+++ b/Brandshop/index.html
@@ -170,24 +170,25 @@
                 <li><a href="#">SNKRS</a></li>
             </ul>
             <div>
-                <a href="#"><i class="fa-brands fa-square-twitter"></i></a>
-                <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
-                <a href="#"><i class="fa-brands fa-square-youtube"></i></a>
-                <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
+                <a href="#"><i class="fa-brands fa-square-twitter icons"></i></a>
+                <a href="#"><i class="fa-brands fa-square-facebook icons"></i></a>
+                <a href="#"><i class="fa-brands fa-square-youtube icons"></i></a>
+                <a href="#"><i class="fa-brands fa-square-instagram icons"></i></a>
             </div>
         </div>
 
         <div class="flex-container legal">
-            <div class="flex-item">
-                <a href="#"><i class="fa-solid fa-location-dot"></i>België</a>
+            <div class="flex-item land">
+                <a href="#"><i class="fa-solid fa-location-dot"></i></a>
+                <p>België</p>
             </div>
             <div class="flex-item">
                 <a href="#">
-                    <i class="fa-regular fa-copyright"></i></a>
+                    <i class="fa-regular fa-copyright copyright"></i></a>
                 <p>2023 Nike, Inc. Alle rechten voorbehouden</p>
             </div>
 
-            <div class="flex-item">
+            <div class="flex-item right">
                 <a href="#">Handleidingen</a>
                 <a href="#">Algemene voorwaarden</a>
                 <a href="#">Verkoopwaarden</a>
