--- a/Brandshop/index.html
+++ b/Brandshop/index.html
@@ -178,16 +178,9 @@
         </div>
 
         <div class="flex-container legal">
-            <div class="flex-item land">
-                <a href="#"><i class="fa-solid fa-location-dot"></i></a>
-                <p>België</p>
-            </div>
             <div class="flex-item">
-                <a href="#">
-                    <i class="fa-regular fa-copyright copyright"></i></a>
-                <p>2023 Nike, Inc. Alle rechten voorbehouden</p>
+                <p class="copyright">&copy; 2023 Nike, Inc. Alle rechten voorbehouden</p>
             </div>
-
             <div class="flex-item right">
                 <a href="#">Handleidingen</a>
                 <a href="#">Algemene voorwaarden</a>
@@ -195,7 +188,6 @@
                 <a href="#">Bedrijfsgegevens</a>
                 <a href="#">Privacy- en cookiebeleid</a>
                 <a href="#">Cookie-instellingen</a>
-
             </div>
         </div>
     </footer>
