--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
           </li>
           <li><a href="https://senne-coen-5mma.github.io/Script/Brandshop" target="_blank"
               class="brandshop">Brandshop</a></li>
+          <li><a href="https://senne-coen-5mma.github.io/Script/Festival" target="_blank"
+              class="festival">Festival</a></li>
           <li><a href="" target="_blank" class="andere">...</a></li>
         </ul>
       </div>
