--- a/Festival/index.html
+++ b/Festival/index.html
@@ -1,13 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Infinite Sounds Festival</title>
+    <title>Infinite-Sounds Festival | 2023 | LINE-UP</title>
 </head>
+
 <body>
-    
+    <header>
+        <div>
+            <p>12 juli 2023</p>
+        </div>
+        <div class="logo">
+            <img src="static/Assets/Logo/logo_huisstijl_SenneCoen_GEEL.svg" alt="Logo">
+        </div>
+        <nav>
+            <ul>
+                <li><a href=""></a>Line-Up</li>
+                <li><a href=""></a>Nieuws</li>
+                <li><a href=""></a>Info</li>
+                <li><a href=""></a>Shop</li>
+            </ul>
+        </nav>
+    </header>
 </body>
+
 </html>
