--- a/Festival/index.html
+++ b/Festival/index.html
@@ -11,21 +11,38 @@
 
 <body>
     <header>
-        <div>
-            <p>12 juli 2023</p>
-        </div>
         <div class="logo">
             <img src="static/Assets/Logo/logo_huisstijl_SenneCoen_GEEL.svg" alt="Logo">
         </div>
         <nav>
             <ul>
-                <li><a href=""></a>Line-Up</li>
-                <li><a href=""></a>Nieuws</li>
-                <li><a href=""></a>Info</li>
-                <li><a href=""></a>Shop</li>
+                <li><a href="">Line-Up</a></li>
+                <li><a href="">Nieuws</a></li>
+                <li><a href="">Info</a></li>
+                <li><a href="">Shop</a></li>
             </ul>
         </nav>
     </header>
+    <main>
+        <section>
+            <section id="line-up">
+                <div class="container">
+                    <div class="grid-card"><img src="static/Assets/Alec1.jpg" alt="Alec Benjamin"> </div>
+                    <div class="grid-card"><img src="static/Assets/Dermot;.jpg" alt="Dermot Kennedy"></div>
+                    <div class="grid-card"><img src="static/Assets/taylor-swift.npg.png" alt="Taylor Swift"></div>
+                    <div class="grid-card"><img src="static/Assets/1D.jpg" alt="One Direction"></div>
+                    <div class="grid-card"><img src="static/Assets/imagine-dragons.png" alt="Imagine Dragons"></div>
+                    <div class="grid-card"><img src="static/Assets/arctic-monkeys.jpg" alt="Arctic Monkeys"></div>
+                    <div class="grid-card"><img src="static/Assets/Coldplay.jpg" alt="Coldplay"></div>
+                    <div class="grid-card"><img src="static/Assets/chase-atlantic.jpeg" alt="Chase Atlantic"></div>
+                    <div class="grid-card"><img src="static/Assets/nf.jpg" alt="NF"></div>
+                </div>
+            </section>
+        </section>
+    </main>
+    <footer>
+        
+    </footer>
 </body>
 
 </html>
