--- a/Festival/index.html
+++ b/Festival/index.html
@@ -38,15 +38,15 @@
                     <h1>Taylor Swift</h1>
                     <h2> Main Stage, 16u30 - 19u</h2>
                 </div>
-                <div class="grid-card"><img src="static/Assets/1D.jpg" alt="One Direction">
-                    <h1>One Direction</h1>
-                    <h2>Main Stage, 19u30 - 21u30</h2>
+                <div class="grid-card">
                     <figure>
-                        <p>ÉÉNMALIG</p>
+                        <img src="static/Assets/1D.jpg" alt="One Direction">
                         <figcaption>
-                            <span>ÉÉNMALIG</span>
+                            <span> <p>ÉÉNMALIG</p> </span>
                         </figcaption>
                     </figure>
+                    <h1>One Direction</h1>
+                    <h2>Main Stage, 19u30 - 21u30</h2>
                 </div>
                 <div class="grid-card"><img src="static/Assets/imagine-dragons.png" alt="Imagine Dragons">
                     <h1>Imagine Dragons</h1>
