--- a/Festival/index.html
+++ b/Festival/index.html
@@ -42,7 +42,7 @@
                     <figure>
                         <img src="static/Assets/1D.jpg" alt="One Direction">
                         <figcaption>
-                            <span> <p>ÉÉNMALIG</p> </span>
+                            <span> ÉÉNMALIG </span>
                         </figcaption>
                     </figure>
                     <h1>One Direction</h1>
